--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.1.4",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0"
     },
